gen/v25.1/rpk/rpk-cluster-license-info.adoc
= rpk cluster license info
:description: rpk cluster license info

Retrieve license information:

    Organization:    Organization the license was generated for.
    Type:            Type of license: free, enterprise, etc.
    Expires:         Expiration date of the license.
    License Status:  Status of the loaded license (valid, expired, not_present).
    Violation:       Whether the cluster is using enterprise features without
                     a valid license.

== Usage

[,bash]
----
rpk cluster license info [flags]
----

== Aliases

[,bash]
----
info, status
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--format |string |Output format (json,yaml,text,wide,help) (default "text").

|-h, --help |- |Help for info.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===